fix opacity on mobile v2

--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -67,4 +67,6 @@ button {
   padding: 0 18px;
   flex-direction: column;
   align-items: center;
+  // delete ↓
+  background-color: $primary;
 }
