--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,6 +91,7 @@ button:active {
   padding: 0 18px;
   flex-direction: column;
   align-items: center;
+  background-color: #a8ff35;
 }
 
 .navbar {
